--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="calculator/calculatorStylesheet.css">
+<link rel="stylesheet" type="text/css" href="calculatorStylesheet.css">
 <html>
 <head>
 </head>
